<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Views on left side -->
    <TextView
        android:id="@+id/tvBaseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/base_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTipPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvBaseLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvBaseLabel"
        tools:text="24%" />

    <TextView
        android:id="@+id/tvTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/Tip_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvBaseLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvTipPercent" />


    <!-- Views on right side -->
    <TextView
        android:id="@+id/tvTotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/total_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvBaseLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvSpitText" />

    <EditText
        android:id="@+id/etBaseAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:autofillHints="phone"
        android:ems="8"
        android:hint="@string/bill_amount_hint"
        android:inputType="numberDecimal"
        android:textColorHint="#607D8B"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvBaseLabel"
        app:layout_constraintStart_toEndOf="@+id/tvBaseLabel"
        app:layout_constraintTop_toTopOf="@+id/tvBaseLabel" />

    <SeekBar
        android:id="@+id/seekBarTip"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:max="30"
        app:layout_constraintBottom_toBottomOf="@+id/tvTipPercent"
        app:layout_constraintStart_toStartOf="@+id/etBaseAmount"
        app:layout_constraintTop_toTopOf="@+id/tvTipPercent" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#616161"
        app:layout_constraintBottom_toBottomOf="@+id/tvTip"
        app:layout_constraintStart_toStartOf="@+id/seekBarTip"
        app:layout_constraintTop_toTopOf="@+id/tvTip"
        tools:text="19.96" />

    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTotalLabel"
        app:layout_constraintStart_toStartOf="@+id/etSplitNumber"
        tools:text="103.4" />

    <TextView
        android:id="@+id/tvFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/text_footer"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTipDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/seekBarTip"
        app:layout_constraintStart_toStartOf="@+id/seekBarTip"
        app:layout_constraintTop_toBottomOf="@+id/seekBarTip"
        app:layout_goneMarginTop="8sp"
        tools:text="Acceptable" />

    <TextView
        android:id="@+id/tvSpitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/split_in"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvBaseLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvTip" />

    <EditText
        android:id="@+id/etSplitNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:autofillHints="phone"
        android:hint="@string/enter_number_of_person"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/tvSpitText"
        app:layout_constraintStart_toEndOf="@+id/tvSpitText"
        app:layout_constraintStart_toStartOf="@+id/tvTipAmount"
        app:layout_constraintTop_toTopOf="@+id/tvSpitText" />

    <TextView
        android:id="@+id/tvTotalAmtForEach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/bill_for_each_person"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvBaseLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalLabel" />

    <TextView
        android:id="@+id/tvAmountForEach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTotalAmtForEach"
        app:layout_constraintStart_toEndOf="@+id/tvTotalAmtForEach"
        app:layout_constraintTop_toTopOf="@+id/tvTotalAmtForEach"
        tools:text="100" />
</androidx.constraintlayout.widget.ConstraintLayout>